Issue 22: Expand all collapsed rows: Added button (shown only if some collapsed rows are exist), implemented code to expand all collapsed rows.

--- a/bw_matchbox/assets/css/compare.css
+++ b/bw_matchbox/assets/css/compare.css
@@ -8,9 +8,12 @@
   --compare-selected-animation-time: 3s;
 }
 
-/* Root node */
-.compare.has-collapsed {
-  /* border: 1px solid red; */
+/* Collapsed tools (shown only if collapsed rows are extist */
+.compare .collapsed-tools {
+  display: none;
+}
+.compare.has-collapsed .collapsed-tools {
+  display: block;
 }
 
 /* Compare tables layout */
